--- a/src/scss/playMusic.scss
+++ b/src/scss/playMusic.scss
@@ -2,12 +2,22 @@ $width:750rpx !global;
 .container{
   width:100%;
   height:100%;
-  color: #333;
+  position: relative;
+  color: white;
   margin:0;
   padding:0;
-  background: url('/static/img/musicBg.jpg');
+  overflow: hidden;
+  .bgimage{
+    position: absolute;
+    z-index: 0;
+    top:0;
+    left:0;
+    width: 100%;
+    height: 100%;
+  }
 }
 header {
+  position: relative;
   text-align: center;
   padding: 6px 0;
   height: 68px;
@@ -15,7 +25,7 @@ header {
     position: relative;
     padding: 0 30px;
     margin-top: 14px;
-    border-top: 1px solid white;
+    //border-top: 1px solid white;
     .singer {
       position: absolute;
       top: 0;
@@ -45,6 +55,7 @@ header {
   }
 }
 footer{
+  position: relative;
   width:100%;
   height:96px;
   .progress-wrap{
